--- a/website_movie_site/templates/movwatch.html
+++ b/website_movie_site/templates/movwatch.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Talkies - Movie Description</title>
+  <title>Talkies - Movie Stream</title>
   <link
       rel="icon"
       type="image/ico"
@@ -15,8 +15,8 @@
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
   <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Inconsolata:wght@500&family=Special+Elite&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Inconsolata:wght@500&family=Special+Elite&display=swap" rel="stylesheet">
   <script
       src="https://kit.fontawesome.com/9e6a57f71b.js"
       crossorigin="anonymous"
@@ -30,6 +30,7 @@
   <link rel="stylesheet" href="../static/css/card_right_side.css">
   <link rel="stylesheet" href="../static/css/footer.css">
   <link rel="stylesheet" href="../static/css/movabout.css">
+  <link rel="stylesheet" type="text/css" href="../static/css/movwatch.css">
 </head>
 
 <body onload="loadingfunction()">
@@ -728,54 +729,8 @@
     <section>
       <div class="main">
         <div class="left">
-          <div class="topbar">
-            <div class="img">
-              <img src="../static/images/mov1.jpg">
-            </div>
-            <div class="movname">
-              <div class="name">
-                <p>After</p>
-              </div>
-              <div class="small_detail">
-                <p>2010 . 150 min . Adventure</p>
-              </div>
-              <div class="rating">
-                <div class="rotten">
-                  <img src="../static/images/rotten_tomato.png">
-                  <p>Rotten Tomato</p>
-                  <p>100%</p>
-                </div>
-                <div class="imdb">
-                  <img src="../static/images/imdb_logo.png">
-                  <p>IMDb</p>
-                  <p>7.5</p>
-                </div>
-                <div class="our">
-                  <img src="../static/images/log_t_final (2).png">
-                  <p>Rating</p>
-                  <p>6</p>
-                </div>
-              </div>
-              <div class="btn">
-                <a href=""><i class="fas fa-share-alt"></i></a>
-                <a href=""><i class="fas fa-heart"></i></a>
-                <a href=""><i class="fas fa-play"></i></a>
-                <a href=""><i class="fas fa-download"></i></a>
-                <a href=""><i class="fas fa-thumbtack"></i></a>
-              </div>
-            </div>
-          </div>
-          <div class="descri">
-            <h1>Description</h1>
-            <br>
-            <p>
-            The movie opens with a voice-over by a teenage girl talking about how moments in your life that can define you while it shows a montage of shots of a couple spending time together. The girl says everything in her life was simple before him, and now it's just after.
-            Tessa (Josephine Langford) wakes up from a dream and starts to pack her room to leave for college. She is joined by her mother, Carol (Selma Blair) and her BF (best friend), Noah (Dylan Arnold) in the kitchen downstairs. Her mother is listing off items that she thinks that Tessa will need while Tessa reminds her that she is going to college and not a survival camp. Noah interjects and says he can drive up there and drop anything off if she forgets it.
-            The next scene shows them driving through various city settings until they get to her new University. Carol, Noah, and Tessa make their way through the crowded dorm halls looking for her new room, B-22. They open the door and are met by loud music and two girls sitting on the bed. Tessa introduces herself to her new roommate Steph (Khadijha Red Thunder) who is vaping. Steph introduces Tessa to Tristan (Pia Mia). Steph makes a remark about being unsure about having a freshman roommate, but she says it should be cool... she'll be her spirit guide. Tristan says that they can get Tessa into all the best places even without a fake ID. Carol leaves the room upset and demands that they ask for a room change since the room reeked of weed. She doesn't want these girls to distract Tessa from her schoolwork. Tessa reminds her that she is responsible and it won't be an issue. She says goodbye to both Noah and her mom. Tessa returns to her room, and Tristan is gone. Steph and Tessa chat about freaking out Carol, how Noah is Tessa's BF (not her brother as Steph believed) and still a senior in High school and Tessa's rather large book collection. Steph leaves, and Tessa unpacks. She is shown later in bed texting with Noah about starting her 1st day the next morning.
-            Tessa leaves her dorm early in the morning, and head's to her 1st class across campus. She meets Landon (Shane Paul McGhie) outside of a locked classroom. They are the first students to arrive. A professor comes by shortly and opens the door for them. It is an Econ 101 course. They chit chat about their majors and being first year students.</p>
-          </div>
-          <div class="trail">
-            <h1>Trailer</h1>
+          <div class="watch">
+            <h1>Watch Now</h1>
             <iframe src="https://www.youtube.com/embed/ipjUI8OxvI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="comments">
@@ -1055,6 +1010,42 @@
           </div>
         </div>
         <div class="right">
+          <div class="topbar">
+            <div class="img">
+              <img src="../static/images/mov1.jpg">
+            </div>
+            <div class="movname">
+              <div class="name">
+                <p>After</p>
+              </div>
+              <div class="small_detail">
+                <p>2010 . 150 min . Adventure</p>
+              </div>
+              <div class="rating">
+                <div class="rotten">
+                  <img src="../static/images/rotten_tomato.png">
+                  <p>Rotten Tomato</p>
+                  <p>100%</p>
+                </div>
+                <div class="imdb">
+                  <img src="../static/images/imdb_logo.png">
+                  <p>IMDb</p>
+                  <p>7.5</p>
+                </div>
+                <div class="our">
+                  <img src="../static/images/log_t_final (2).png">
+                  <p>Rating</p>
+                  <p>6</p>
+                </div>
+              </div>
+              <div class="btn">
+                <a href=""><i class="fas fa-share-alt"></i></a>
+                <a href=""><i class="fas fa-heart"></i></a>
+                <a href=""><i class="fas fa-download"></i></a>
+                <a href=""><i class="fas fa-thumbtack"></i></a>
+              </div>
+            </div>
+          </div>
           <div class="cate">
             <h1>Categories</h1>
             <ul>
