--- a/talkies/templates/FAQ.html
+++ b/talkies/templates/FAQ.html
@@ -802,9 +802,9 @@
             <p class="footer-links">
               <a href="/" class="link-1">Home</a>
               <a href="/about">About</a>
-              <a href="FAQ.html">Faq</a>
-              <a href="Feedback-FAQ.html">Contact</a>
-              <a href="Feedback-FAQ.html">Feedback</a>
+              <a href="/faq">Faq</a>
+              <a href="/feedback">Contact</a>
+              <a href="/feedback">Feedback</a>
             </p>
             <p class="footer-company-name">Talkies © 2021</p>
           </div>
