--- a/talkies/templates/index.html
+++ b/talkies/templates/index.html
@@ -3093,11 +3093,11 @@
             <!-- <h3>Company<span>logo</span></h3> -->
             <img src="{% static 'images/logo_final.png' %}">
             <p class="footer-links">
-              <a href="index.html" class="link-1">Home</a>
+              <a href="/" class="link-1">Home</a>
               <a href="/about">About</a>
               <a href="/faq">Faq</a>
-              <a href="Feedback-FAQ.html">Contact</a>
-              <a href="Feedback-FAQ.html">Feedback</a>
+              <a href="/feedback">Contact</a>
+              <a href="/feedback">Feedback</a>
             </p>
             <p class="footer-company-name">Talkies © 2021</p>
           </div>
