--- a/talkies/templates/jaeljalesjkljflksfjlf.html
+++ b/talkies/templates/jaeljalesjkljflksfjlf.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
     <head>
@@ -11,7 +12,7 @@
     <body>
         <link href="https://unpkg.com/@videojs/themes@1/dist/forest/index.css" rel="stylesheet">
         <video id="my-video" class="video-js vjs-theme-forest " controls preload="auto" width="1080" height="720" data-setup="{}">
-            <source src="../../Three.js Journey - The ultimate Three.js course/[TutsNode.com] - Three.js Journey - The ultimate Three.js course/lesson1.mp4" type="video/mp4" />
+            <source src="Three.js Journey - The ultimate Three.js course/[TutsNode.com] - Three.js Journey - The ultimate Three.js course/lesson1.mp4" type="video/mp4" />
         </video>
         <script src="https://vjs.zencdn.net/7.15.4/video.min.js"></script>
     </body>
