--- a/talkies/templates/movabout.html
+++ b/talkies/templates/movabout.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -15,6 +14,9 @@
   rel="stylesheet"
   href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
   />
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Inconsolata:wght@500&family=Special+Elite&display=swap" rel="stylesheet">
   <script
       src="https://kit.fontawesome.com/9e6a57f71b.js"
       crossorigin="anonymous"
@@ -514,6 +516,18 @@
                           <i class="fas fa-sign-in-alt"></i> </a><span><a href="signin_up.html">Sign In / Up</a></span>
                   </div>
               </li>
+              <li>
+                  <div class="dropdown rolling">
+                      <a class="dropbtn rolling_icon">
+                          <i class="fas fa-user"></i> </a><span><a href="user_profile.html">Profile</a></span>
+                  </div>
+              </li>
+              <li>
+                  <div class="dropdown rolling">
+                      <a class="dropbtn rolling_icon">
+                          <i class="fas fa-sign-out-alt"></i> </a><span><a href="">Log Out</a></span>
+                  </div>
+              </li>
           </ul>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
@@ -771,6 +785,10 @@
             Tessa (Josephine Langford) wakes up from a dream and starts to pack her room to leave for college. She is joined by her mother, Carol (Selma Blair) and her BF (best friend), Noah (Dylan Arnold) in the kitchen downstairs. Her mother is listing off items that she thinks that Tessa will need while Tessa reminds her that she is going to college and not a survival camp. Noah interjects and says he can drive up there and drop anything off if she forgets it.
             The next scene shows them driving through various city settings until they get to her new University. Carol, Noah, and Tessa make their way through the crowded dorm halls looking for her new room, B-22. They open the door and are met by loud music and two girls sitting on the bed. Tessa introduces herself to her new roommate Steph (Khadijha Red Thunder) who is vaping. Steph introduces Tessa to Tristan (Pia Mia). Steph makes a remark about being unsure about having a freshman roommate, but she says it should be cool... she'll be her spirit guide. Tristan says that they can get Tessa into all the best places even without a fake ID. Carol leaves the room upset and demands that they ask for a room change since the room reeked of weed. She doesn't want these girls to distract Tessa from her schoolwork. Tessa reminds her that she is responsible and it won't be an issue. She says goodbye to both Noah and her mom. Tessa returns to her room, and Tristan is gone. Steph and Tessa chat about freaking out Carol, how Noah is Tessa's BF (not her brother as Steph believed) and still a senior in High school and Tessa's rather large book collection. Steph leaves, and Tessa unpacks. She is shown later in bed texting with Noah about starting her 1st day the next morning.
             Tessa leaves her dorm early in the morning, and head's to her 1st class across campus. She meets Landon (Shane Paul McGhie) outside of a locked classroom. They are the first students to arrive. A professor comes by shortly and opens the door for them. It is an Econ 101 course. They chit chat about their majors and being first year students.</p>
+          </div>
+          <div class="trail">
+            <h1>Trailer</h1>
+            <iframe src="https://www.youtube.com/embed/ipjUI8OxvI8" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="comments">
             <h1>Comments</h1>
@@ -1068,16 +1086,16 @@
           <div class="trendnow">
             <h1>Trending Now</h1>
             <ol>
-              <li>Fee</li>
-              <li>Fi</li>
-              <li>Fo</li>
-              <li>Fum</li>
-              <li>Fee</li>
-              <li>Fi</li>
-              <li>Fo</li>
-              <li>Fum</li>
-              <li>Fee</li>
-              <li>Fi</li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fee</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fi</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fo</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fum</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fee</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fi</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fo</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fum</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fee</a></li>
+              <li><img src="../static/images/mov1.jpg"><a href="">Fi</a></li>
             </ol>
           </div>
         </div>
