--- a/talkies/static/css/comment.css
+++ b/talkies/static/css/comment.css
@@ -273,9 +273,12 @@
   border: 1px solid rgba(209, 213, 219, 0.3);
   padding: 12px 20px;
   border: none;
-  border-radius: 4px;
   cursor: pointer;
-  float: right;
+  /*float: right;*/
+  width: 7vw;
+  height: 3rem;
+  font-size: 1.2rem;
+  font-family: cursive ;
 }
 
 input[type=submit]:hover {
