--- a/talkies/static/css/loading.css
+++ b/talkies/static/css/loading.css
@@ -3,6 +3,6 @@
   position: fixed;
   width: 100%;
   height: 100vh;
-  background: #000 url("../images/Talkies.gif") no-repeat center;
+  background: #000 url("../images/load.gif") no-repeat center;
   z-index: 9999;
 }
