--- a/talkies/static/css/user.css
+++ b/talkies/static/css/user.css
@@ -1,50 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-body {
-  width: 100vw;
-  height: 100vh;
-  margin: 0;
-  overflow: hidden;
-  background-color: black;
-}
-::-webkit-scrollbar {
-  display: none;
-}
-.divider-grid {
-  width: 100vw;
-  height: 100vh;
-  background-color: black;
-  overflow-y: scroll;
-}
-section {
-  height: auto;
-  border: none;
-  outline: none;
-  scroll-snap-align: start;
-}
-section:nth-of-type(1) {
-  background-color: black;
-  /*color: white;*/
-  min-height: 65vh;
-}
-section:nth-of-type(2) {
-  /*min-height: 10vh;*/
-  height: 30vh;
-}
-
-.grid_container {
-  display: grid;
-  grid-template-columns: 100vw;
-  grid-template-rows: auto auto;
-}
-.right_card_side {
-  margin: 45px 0;
-  display: grid;
-  grid-template-columns: auto;
-  grid-template-rows: auto auto auto;
-  row-gap: 20px;
-}
 .filter h3 {
   color: #03e9f4;
   text-align: center;
@@ -53,12 +6,21 @@ section:nth-of-type(2) {
   text-shadow: 0 0 1.25px #03e9f4, 0 0 6.25px #03e9f4, 0 0 12.5px #03e9f4,
     0 0 25px #03e9f4;
 }
-
+.right_card_side {
+  width: 90vw;
+  margin: 10px auto;
+  backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    padding: 20px 0;
+}
 .container {
-  margin: 0 auto;
+  margin: 50px auto 0;
   padding:0 2vw ;
   width: 100vw;
-  position: fixed; 
+  /*position: fixed; */
   z-index: 99;
   background-color: black;
 }
@@ -155,10 +117,3 @@ section:nth-of-type(2) {
   font-weight: 300;
   margin: 2em 0;
 }
-
-
-
-
-
-
-
