--- a/talkies/templates/FAQ.html
+++ b/talkies/templates/FAQ.html
@@ -513,6 +513,18 @@
                           <i class="fas fa-sign-in-alt"></i> </a><span><a href="signin_up.html">Sign In / Up</a></span>
                   </div>
               </li>
+              <li>
+                  <div class="dropdown rolling">
+                      <a class="dropbtn rolling_icon">
+                          <i class="fas fa-user"></i> </a><span><a href="user_profile.html">Profile</a></span>
+                  </div>
+              </li>
+              <li>
+                  <div class="dropdown rolling">
+                      <a class="dropbtn rolling_icon">
+                          <i class="fas fa-sign-out-alt"></i> </a><span><a href="">Log Out</a></span>
+                  </div>
+              </li>
           </ul>
           <a href="javascript:void(0);" class="icon" onclick="myFunction()">
               <i class="fa fa-bars"></i>
