--- a/talkies/templates/signin_up.html
+++ b/talkies/templates/signin_up.html
@@ -764,7 +764,7 @@
                 name="password"
                 id="password"
               /><a class="form__link">Forgot your password?</a>
-              <button class="form__button" submit" type="submit" >SIGN IN</button>
+              <input class="button" type="submit" value="SIGN IN">
             </form>
           </div>
           <div class="switch" id="switch-cnt">
@@ -773,16 +773,16 @@
             <div class="switch__container" id="switch-c1">
               <h2 class="switch__title title">Welcome Back !</h2>
               <p class="switch__description description">
-                To keep connected with us please login with your personal info
+                To keep connected with us please login with your personal info.
               </p>
-              <button class="switch__button button switch-btn">SIGN IN</button>
+              <button class="switch__button button switch-btn" o="/login">SIGN IN</button>
             </div>
             <div class="switch__container is-hidden" id="switch-c2">
               <h2 class="switch__title title">Hello Friend !</h2>
               <p class="switch__description description">
                 Enter your personal details and start journey with us
               </p>
-              <button class="switch__button button switch-btn">SIGN UP</button>
+              <button class="switch__button button switch-btn" name="switch_btn" value="switch_btn" type="submit">SIGN UP</button>
             </div>
           </div>
         </div>
