--- a/talkies/templates/user_edit.html
+++ b/talkies/templates/user_edit.html
@@ -2,31 +2,39 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8" />
+    <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Talkies - Sign Up/In</title>
+    <title>Talkies  </title>
+    <link
+      rel="stylesheet"
+      href="https://unpkg.com/swiper/swiper-bundle.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Lovers+Quarrel"
+      rel="stylesheet"
+    />
     <link
       rel="icon"
       type="image/ico"
       href="{% static 'images/log_t_final (2).png' %}"
     />
-    <link
-      rel="stylesheet"
-      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css"
-    />
-    <link
-      rel="stylesheet"
-      href="https://netdna.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css"
-    />
-    <link rel="stylesheet" href="{% static 'css/initial.css' %}">
+    <script
+      src="https://kit.fontawesome.com/9e6a57f71b.js"
+      crossorigin="anonymous"
+    ></script>
+    <link rel="stylesheet" href="{% static 'css/navbar.css' %}">
+    <link rel="stylesheet" href="{% static 'css/searchbar.css' %}">
     <link rel="stylesheet" href="{% static 'css/loading.css' %}">
-    <link rel="stylesheet" href="{% static 'css/navbar.css' %}" />
-    <link rel="stylesheet" href="{% static 'Feedback-FAQ.html
-    Feedback-FAQ.htmlcss/search_navbar.css' %}">    
     <link rel="stylesheet" href="{% static 'css/snow.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'css/initial.css' %}" />
+    <!-- <link rel="stylesheet" type="text/css" href="{% static 'css/about.css"> -->
     <link rel="stylesheet" href="{% static 'css/footer.css' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'css/signin_up.css' %}" />
-    
+    <link rel="stylesheet" type="text/css" href="{% static 'css/edit.css' %}">
+
   </head>
 
   <body onload="loadingfunction()">
@@ -77,7 +85,7 @@
                                       <img src="https://i.redd.it/b3esnz5ra34y.jpg" />
                                   </div>
                                   <div class="card_drop_title title-white">
-                                      <a href="s/quality/{{ n.quality }}">{{ n.quality }}</a>
+                                      <a href="/quality/{{ n.quality }}">{{ n.quality }}</a>
                                   </div>
                               </div>
                               {% endfor %}
@@ -108,7 +116,7 @@
               <li>
                   <div class="dropdown rolling">
                       <a class="dropbtn rolling_icon">
-                          <i class="fas fa-sign-in-alt"></i> </a><span><a href="/user/signup">Sign In / Up</a></span>
+                          <i class="fas fa-sign-in-alt"></i> </a><span><a href="/user/logout">Logout</a></span>
                   </div>
               </li>
           </ul>
@@ -117,7 +125,7 @@
           </a>
       </div>
   </div>
-    <div class="divider-grid">
+    <div class="partition">
       <div class="background_snow">
         <div class="snow"></div>
         <div class="snow"></div>
@@ -321,73 +329,37 @@
         <div class="snow"></div>
       </div>
       <section>
-        <div class="main">
-          <div class="container a-container is-txl" id="a-container">
-            <form class="form" id="a-form" method="" action="">
-              <h2 class="form_title title">Create Account</h2>
-              <div class="form__icons">
-                <a href="" class="form__icon"><i class="fab fa-google"></i></a
-                ><a href="" class="form__icon"><i class="fa fa-facebook"></i></a
-                ><a href="" class="form__icon"><i class="fa fa-twitter"></i></a>
+        <div class="edit">
+          <h1>Edit your Information</h1>
+          <div class="image">
+              <div class="img">
+                <img src="{% static 'images/log_t_final (2).png' %}">
+                <h4>Your Avatar</h4>
               </div>
-              <span class="form__span">or use email for registration</span>
-              <input class="form__input" type="text" placeholder="Name" />
-              <input class="form__input" type="text" placeholder="Email" />
-              <input
-                class="form__input"
-                type="password"
-                placeholder="Password"
-              />
-              <button class="form__button button submit" type="submit">
-                SIGN UP
-              </button>
-            </form>
-          </div>
-          <div class="container b-container is-txl is-z200" id="b-container">
-            <form class="form" id="b-form" method="POST" action="">
-                {% csrf_token %}
-              <h2 class="form_title title">Sign in to Website</h2>
-              <div class="form__icons">
-                <a href="" class="form__icon"><i class="fab fa-google"></i></a
-                ><a href="" class="form__icon"><i class="fa fa-facebook"></i></a
-                ><a href="" class="form__icon"><i class="fa fa-twitter"></i></a>
+              <div class="avatar">
+                <div class="select">
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                  <button><img src="{% static 'images/rotten_tomato.png' %}"></button>
+                </div>
               </div>
-              <span class="form__span">or use your username</span>
-              <input class="form__input" type="text" placeholder="username" name="username"/>
-              <input
-                class="form__input"
-                type="password"
-                placeholder="Password"
-                name="password"
-                id="password"
-              /><a class="form__link">Forgot your password?</a>
-              <input class="button" type="submit" value="SIGN IN"> 
-            </form>
           </div>
-          <div class="switch is-txr" id="switch-cnt">
-
-            <div class="switch__circle"></div>
-            <div class="switch__circle switch__circle--t is-txr"></div>
-
-            <div class="switch__container is-hidden" id="switch-c2">
-              <h2 class="switch__title title">Welcome Back !</h2>
-              <p class="switch__description description">
-                To keep connected with us please login with your personal info
-              </p>
-              <button class="switch__button button switch-btn">SIGN IN</button>
-            </div>
-
-            <div class="switch__container" id="switch-c1">
-              <h2 class="switch__title title">Hello Friend !</h2>
-              <p class="switch__description description">
-                Enter your personal details and start journey with us
-              </p>
-              <a class="switch__button button switch-btn" href="/user/signup">SIGN UP</a>
-            </div>
+          <div class="right">
+            <form method="POST">
+                {% csrf_token %}   
+                <p>Username: {{ user_form.username }}</p>
+                <p>E-mail : {{ user_form.email }}</p> 
+                <input type="submit" value="Submit" name="submit" id="submit"> 
+            </form>
           </div>
         </div>
-
-        <!-- end  -->
       </section>
       <section>
         <footer class="footer-distributed">
@@ -397,7 +369,7 @@
             <p class="footer-links">
               <a href="/" class="link-1">Home</a>
               <a href="/about">About</a>
-              <a href="/fa1">Faq</a>
+              <a href="/faq">Faq</a>
               <a href="/feedback">Contact</a>
               <a href="/feedback">Feedback</a>
             </p>
@@ -432,9 +404,9 @@
         </footer>
       </section>
     </div>
-    <script src="{% static 'js/navbar.js' %}"></script>
-    <script src="{% static 'js/res_navbar.js' %}"></script>
+
+
     <script src="{% static 'js/loading.js' %}"></script>
-    <script src="{% static 'js/signin_up.js' %}"></script>
+    <script src="{% static 'js/res_navbar.js' %}"></script>
   </body>
 </html>
