--- a/talkies/assets/css/movabout.css
+++ b/talkies/assets/css/movabout.css
@@ -7,6 +7,9 @@
 	grid-gap: 20px;
 	margin: 15px auto;
 }
+.main h1{
+	font-family: 'Inconsolata', monospace;
+}
 .left{
 	width: 55vw;
 	min-height: 65vh;
@@ -27,6 +30,13 @@
 }
 .topbar .img{
 	margin: auto;
+	/* width: 100%; */
+	/* height: 100%; */
+}
+img{
+	/* display: none; */
+	width: 13vw;
+	height: auto;
 }
 .topbar .movname{
 	display: grid;
@@ -35,6 +45,7 @@
 .topbar .movname .name{
 	font-size: 50px;
 	font-weight: 700;
+	font-family: 'Special Elite', cursive;
 	/*margin: -40px 0;*/
 	/*background-color: black;*/
 }
@@ -88,6 +99,27 @@
     border-radius: 12px;
     border: 1px solid rgba(255, 255, 255, 0.125);
     padding: 15px;
+}
+.descri p{
+	font-family: 'Fira Sans', sans-serif;
+	line-height: 1.5;
+}
+.trail{
+	width: 55vw;
+	backdrop-filter: blur(16px) saturate(180%);
+    -webkit-backdrop-filter: blur(16px) saturate(180%);
+    background-color: rgba(17, 25, 40, 0.75);
+    border-radius: 12px;
+    border: 1px solid rgba(255, 255, 255, 0.125);
+    padding: 15px 0;
+}
+.trail h1{
+	padding: 15px;
+}
+.trail iframe{
+	width: 100%;
+	height: 50vh;
+	padding: 15px 0;
 }
 .comments{
 	backdrop-filter: blur(16px) saturate(180%);
@@ -158,6 +190,7 @@
 .right .cate ul{
 	padding: 20px;
 	font-size: 15px;
+	font-family: 'Fira Sans', sans-serif;
 	margin: 0;
 }
 .right .cate ul li{
@@ -179,10 +212,22 @@
     /*display: grid;*/
 }
 .right .trendnow ol{
-	padding: 20px;
-	font-size: 15px;
+	padding:5px 50px ;
+	font-size: 20px;
 	margin: 0;
+	font-family: 'Inconsolata', monospace;
 }
 .right .trendnow ol li{
 	padding: 10px;
+}
+.right .trendnow ol li img{
+	width: 45px;
+	height: 45px;
+	border-radius: 50%;
+	transform: translateY(12.5px);
+}
+.right .trendnow ol li a{
+	text-decoration: none;
+	color: white;
+	padding: 0 15px;
 }
