--- a/talkies/static/css/searchbar_2.css
+++ b/talkies/static/css/searchbar_2.css
@@ -14,6 +14,7 @@ input[type="text"] {
   background-color: black;
   color: #03e9f4;
   box-shadow: 0px 2px 3px rgba(255, 255, 255, 1);
+  z-index:99
 }
 
 .search-container button {
